--- a/src/components/sections/1Hero/_Hero.scss
+++ b/src/components/sections/1Hero/_Hero.scss
@@ -11,7 +11,7 @@
     content: "";
     position: absolute;
     bottom: 35px;
-    z-index: 999;
+    z-index: 2;
 
     height: 3px;
     width: calc(5vw + 90px);
