--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -41,7 +41,7 @@ header {
   width: 100%;
   max-width: 100vw;
   padding: 13px 50px;
-  z-index: 1;
+  z-index: 999;
   /* Title */
   /* Nav */
 }
@@ -393,7 +393,7 @@ footer .footer-div#second-div .footer-copyright {
   content: "";
   position: absolute;
   bottom: 35px;
-  z-index: 999;
+  z-index: 2;
   height: 3px;
   width: calc(5vw + 90px);
   border-radius: 999px;
